--- a/css/stylesmodule5.css
+++ b/css/stylesmodule5.css
@@ -54,11 +54,8 @@ body {
   text-align: center;
 }
 #nav-list a:hover {
-  background: transparent;
-  color: #557c3e;
+  background: #E7E7E7;
 }
-
-
 #nav-list a span {
   font-size: 1.8em;
 }
@@ -373,6 +370,8 @@ h3.menu-item-title {
     width: 100%;
   }
 }
+
+
 
 
 
