--- a/css/stylesmodule5.css
+++ b/css/stylesmodule5.css
@@ -54,7 +54,7 @@ body {
   text-align: center;
 }
 #nav-list a:hover {
-  background: #E7E7E7;
+  border-bottom: 1px solid #fff;
 }
 #nav-list a span {
   font-size: 1.8em;
